# c-demo

./: .gitignore  CMakeLists.txt  main.c
demo/array/: demo01.c  demo01.h
demo/asm/: asm.c  asm.h
demo/base/: base_demo01.c  base_demo01.h  demo01.c  demo01.h
demo/define/: define_demo01.c  define_demo01.h
demo/file/: demo01.c  demo01.h  file_demo01.c  file_demo01.h
demo/malloc/: demo01.c  demo01.h  malloc_demo01.c  malloc_demo01.h
demo/memory/: demo01.c  demo01.h
demo/pointer/: demo01.c  demo01.h  pointer_demo01.c  pointer_demo01.h
demo/preprocessor/: preprocessor_demo01.h
demo/process/: process_demo01.c  process_demo01.h
demo/socket/: socket_demo01.c  socket_demo01.h  socket_demo02.c  socket_demo02.h
demo/string/: demo01.c  demo01.h  string_demo01.c  string_demo01.h
demo/struct/: demo01.c  demo01.h
demo/thread/: Demo01.c  Demo01.h
leolib/: leo_array.c  leo_array.h  leo_buffer.c  leo_buffer.h  leo_socket.c  leo_socket.h
pointer/: CMakeLists.txt  main.c
pointer/demo/: fun_ptr_demo.c  fun_ptr_demo.h
